syntax = "proto3";

package erda.admin;
option go_package = "github.com/erda-project/erda-proto-go/admin/pb";
import "google/api/annotations.proto";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

service DingTalkTestService {
  rpc SendTestMessage (DingTalkTestRequest)  returns (DingTalkTestResponse) {
    option (google.api.http) = {
      post: "/api/admin/notify/dingtalk-test"
    };
  }
}

message DingTalkTestRequest {
  string  webhook = 1 [(validate.rules).string.min_len = 1];
  string  secret = 2 [(validate.rules).string.min_len = 1];
}

message DingTalkTestResponse {
  bool    success = 1;
  string  error = 2;
}